--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.2.10",
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@angular/router": "^5.2.10",
+    "angular2-moment": "^1.8.0",
     "bootstrap": "^4.1.0",
     "core-js": "^2.5.5",
     "ngx-bootstrap": "^2.0.4",
