--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "jegybazar",
   "version": "0.0.0",
@@ -25,6 +24,7 @@
     "angular2-moment": "^1.8.0",
     "bootstrap": "^4.1.0",
     "core-js": "^2.5.5",
+    "firebase": "^4.6.2",
     "ngx-bootstrap": "^2.0.4",
     "rxjs": "^5.5.10",
     "zone.js": "^0.8.26"
